# aegis_zero

./: CMakeLists.txt  README.md
aegis_zero_GITHUB/: README_URUCHOMIENIE_MODELSIM.txt
aegis_zero_GITHUB/hdl/: bram_rule_memory.v  decision_unit.v  packet_parser.v
aegis_zero_GITHUB/hdl/tb/: tb_aegis_zero_top.v
aegis_zero_GITHUB/sim/: run_all.do  sim_top.do
aegis_zero_GITHUB/testvectors/: bloom_filter.hex  bram_rules.hex  g1.hex  g2.hex
src/: Aegis_zero_test.py  aegis_zero_v1.c  aegis_zero_v2.1.c  aegis_zero_v2.2.c  experiment2_gpu.cu
src/aegis_zero/: MODELSIM_START_HERE.bat  README_OSOBA3_TESTY.md  aegis_zero.qpf  aegis_zero.qsf  aegis_zero.qws  aegis_zero.sdc  aegis_zero_assignment_defaults.qdf  aegis_zero_de2_115.v  aegis_zero_nativelink_simulation.rpt  bloom_filter.hex  bloom_filter.v  bloom_filter_simple.v  bram_rule_memory.v  bram_rule_memory.v.bak  clkmux.v  debouncer.v  decision_unit.v.bak  hex_to_7seg.v  mphf_lookup.v  mphf_lookup.v.bak  packet_parser.v  pll_100.v  sim_bloom.do  sim_mphf.do  tb_bloom_filter.v  tb_bloom_filter_checked.v  tb_generated_vectors.mem  tb_layer2.v  tb_layer2.v.bak  tb_mphf_lookup.v  tb_packet_parser.v  tb_packet_parser.v.bak  tb_top_aegis_zero.v  tb_top_aegis_zero.v.bak  top_aegis_zero.v  top_aegis_zero_verif.v  trusted_test_vectors.txt  vsim.wlf
src/aegis_zero/db/: .cmp.kpt  aegis_zero.(0).cnf.cdb  aegis_zero.(0).cnf.hdb  aegis_zero.(1).cnf.cdb  aegis_zero.(1).cnf.hdb  aegis_zero.(10).cnf.cdb  aegis_zero.(10).cnf.hdb  aegis_zero.(11).cnf.cdb  aegis_zero.(11).cnf.hdb  (+119 more)
src/tools/: gen_mphf.py  generate_tb_vectors.py
(+80 files in other folders)
